--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-native-vector-icons": "^6.4.14",
     "axios": "^1.4.0",
     "deprecated-react-native-prop-types": "^4.2.1",
+    "expo-secure-store": "^13.0.2",
     "i18next": "^23.11.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
